--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@frctl/fractal": "^1.1.7"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.1"
   }
 }
