--- a/src/components/card/container/container.config.json
+++ b/src/components/card/container/container.config.json
@@ -7,7 +7,7 @@
           "sub-caption":"Front-end",
           "logo":"/static/images/Logo.svg",
           "bg-image": "/static/images/Lagoa.jpg",
-          "text":"txt txt txt txt txt txt txt txt txt txt txt txt txt txt "
+          "text":"Lorem ipsun dolor sit a met lorem dolor sit a met factius lorem ipsun dolor sit a met ipsun lorem amet"
         }
       },
       {
@@ -24,6 +24,38 @@
           "sub-caption":"Germany",
           "caption":"Berlin",
           "bg-image": "/static/images/Berlin.jpg"
+        }
+      },
+      {
+        "data": {
+          "modifier":"@base.modifier",
+          "sub-caption":"Spain",
+          "caption":"Barcelona",
+          "bg-image": "/static/images/Barcelona.jpg"
+        }
+      },
+      {
+        "data": {
+          "modifier":"@base.modifier",
+          "sub-caption":"France",
+          "caption":"Paris",
+          "bg-image": "/static/images/Paris.jpg"
+        }
+      },
+      {
+        "data": {
+          "modifier":"@base.modifier",
+          "sub-caption":"Netherlands",
+          "caption":"Amsterdam",
+          "bg-image": "/static/images/Amsterdam.jpg"
+        }
+      },
+      {
+        "data": {
+          "modifier":"@base--double.modifier",
+          "sub-caption":"United Kingdom",
+          "caption":"London",
+          "bg-image": "/static/images/London.jpg"
         }
       }
     ]
