Hover text animation

--- a/src/components/card/container/container.config.json
+++ b/src/components/card/container/container.config.json
@@ -58,7 +58,7 @@
           "caption":"Amsterdam",
           "bg-image": "/static/images/amsterdam.jpg",
           "bg-alignment":"v-center",
-          "text":"Amsterdam is the Netherlands’ capital, known for its artistic heritage, elaborate canal system and narrow houses with gabled facades."
+          "text":"Amsterdam is the Netherlands’ capital, known for its artistic heritage, elaborate canal system and architecture."
         }
       },
       {
